# server

./: Cargo.toml  Config.toml
.github/workflows/: rust.yml
protocol/: Cargo.toml  README.md
protocol/src/: decode.rs  encode.rs  lib.rs  state.rs
src/: config.rs  global_static.rs  lib.rs  main.rs
src/server/: mod.rs  read_stream.rs  server.rs  service.rs  write_stream.rs
