[package]
name = "lizard"
version = "0.1.0"
authors = ["neetdai <974498346@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
toml = "0.5.6"
serde_derive = "1.0.115"
serde = "1.0.115"
thiserror = "1.0.20"
lazy_static = "1.4.0"
async-native-tls = { version = "0.3.3", default-features = false, features = ["runtime-tokio"] }
log = "0.4.11"
tracing = "0.1.21"
tracing-subscriber = "0.2.15"
futures = "0.3.5"
bytes = "0.5.6"
protocol = {git = "https://github.com/lizard-message/protocol"}
radix_trie = "0.2.1"

[target."cfg(windows)".dependencies]
rand = "0.7.3"
